extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_online_random_pressed():
	pass # Replace with function body.


func _on_online_private_pressed():
	pass # Replace with function body.


func _on_vs_ai_pressed():
	pass # Replace with function body.


func _on_story_mode_pressed():
	pass # Replace with function body.


func _on_challenge_mode_pressed():
	pass # Replace with function body.
